# lab7

./: Dockerfile  docker-compose.yml  entrypoint.sh  fill_db.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 6dc404604ecd_admin_user.py  e5f7887333c3_roles.py  fc7ebe108edf_init.py
data/minio/.minio.sys/: format.json
src/: config.py  main.py
src/analytics/routers/: router.py
src/analytics/services/: service.py
src/attachment/models/: model.py
src/attachment/repositories/: repository.py
src/attachment/schemas/: schema.py
src/attachment/services/: service.py
src/auth/routers/: router.py
src/auth/schemas/: schema.py  token.py
src/auth/services/: service.py
src/base/: model.py  repository.py  schema.py  service.py
src/db/: database.py
src/dependencies/: auth.py  exceptions_handlers.py  permissions.py  services.py
src/endpoint/models/: model.py
src/endpoint/repositories/: repository.py
src/endpoint/schemas/: endpoint.py
src/endpoint/services/: service.py
src/exceptions/: exception.py
src/info/routers/: router.py
src/info/schemas/: schema.py
src/info/services/: service.py
src/permission/models/: model.py
src/permission/repositories/: repository.py
src/permission/schemas/: schema.py
src/permission/services/: service.py
src/role/models/: model.py
src/role/repositories/: repository.py
src/role/routers/: router.py
src/role/schemas/: schema.py
src/role/services/: service.py
src/storage/dependencies/: get_minio_services.py
src/webpages/: package-lock.json  pages.py
temp/: subject_area.txt  target_attribute.txt
(+89 files in other folders)
